# Coffee-Time

./: README.md
ATM Simulatior with SFML/ATM-V1/: ATM Simulator.cpp
Controlling Arduino with Python/: README.md
Controlling Arduino with Python/controlLED/: controlLED.ino  send_data.py
Controlling Speed for Ardunio/: LED_PWM_Control.ino  README.md  control_speed.ino
School Crossing Sign (for Autonomous Vehicles)/: README.md  crossing.xml  final.py  installArduinoIDE.txt
School Crossing Sign (for Autonomous Vehicles)/dcm/: dcm.ino
System Information Checker/: main.py
Tic Tac Toe Ai/: CMakeLists.txt  README.md
Tic Tac Toe Ai/src/: Main.cpp  start.cpp
Vacuum Cleaner Algorithm in AI/: README.md  vacuum_cleaner_algorithm_in_ai.py
